@@ -2,6 +2,8 @@
 ========================
 * Tightened up a possible race deep inside the connection management.
 
+* PathChildrenCache.rebuild() and PathChildrenCache.rebuildNode() were not handling deleted nodes.
+
 1.3.0 - January 10, 2013
 ========================
 * MAJOR CHANGE (thus a version bump): I'd always thought that if the client is disconnected from the server
